fixed layout issue of page-through exprs in Firefox

--- a/libsrc/scss/community.scss
+++ b/libsrc/scss/community.scss
@@ -50,8 +50,8 @@
 
     .expr {
         width:100%; height:100%; position:absolute; left: 0; top:0;
-        &.expr-visible { display:block; }
-        &.expr-hidden { display:none; }
+        // &.expr-visible { display:block; }
+        // &.expr-hidden { display:none; }
     }
 }
 .vert_spaced {
